--- a/style.css
+++ b/style.css
@@ -16,5 +16,36 @@ body {
     padding: 20px;
     border-radius: 10px;
     box-shadow: 0 4-x 8px rgba(0, 0, 0, 0.2);
-    
+}
+
+h1 {
+    text-align: center;
+    font-size: 2.5em;
+    color: #333333;
+    margin-bottom: 20px;
+}
+
+.formulario {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.formulario input[type="number"] {
+    width: 200px;
+    padding: 10px;
+    border-radius: 5px;
+    border: 1px solid #cccccc;
+    font-size: 1.1em;
+}
+
+.formulario input[type="submit"]{
+    padding: 10px 20px;
+    background-color: #28a245;
+    color: #ffffff;
+    border: none;
+    border-radius: 5px
+    font-size: 1.1em;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
