--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ h1 {
 .formulario input[type="number"] {
     width: 200px;
     padding: 10px;
+    margin-bottom: 10px;
     border-radius: 5px;
     border: 1px solid #cccccc;
     font-size: 1.1em;
@@ -49,3 +50,4 @@ h1 {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+ .formulario input
